--- a/announcements/rich-notes-for-smart-learning.html
+++ b/announcements/rich-notes-for-smart-learning.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-10-14 Fri 10:20 -->
+<!-- 2022-10-14 Fri 10:25 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Learn Smarter By Taking Rich, Hypertext Notes</title>
@@ -197,8 +197,8 @@
 <body>
 <div id="content" class="content">
 <h1 class="title">Learn Smarter By Taking Rich, Hypertext Notes</h1>
-<div id="outline-container-org4b94054" class="outline-2">
-<h2 id="org4b94054"><span class="section-number-2">1.</span> Background</h2>
+<div id="outline-container-orgb409c60" class="outline-2">
+<h2 id="orgb409c60"><span class="section-number-2">1.</span> Background</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 As a student, I learnt to take <a href="https://www.cs.cornell.edu/info/people/raman/phd-thesis/html/root-thesis.html">notes in Braille</a> while in class and
@@ -212,19 +212,19 @@ original content when perusing my notes.
 Fast-forward to the age of online computing, a complete audio desktop
 in the form of Emacspeak, a wealth of online resources in the form of
 E-Books, Audio Books, Podcasts and Blogs, all backed by Universal
-Search accessible from a consistent environment. So I've been asking
-myself what <i>note-taking</i> in this environment should look like.  This
-article summarizes the present state of what I use at present.
+Search and accessible from a consistent environment. So I've been
+asking myself what <i>note-taking</i> in this environment should look like.
+This article summarizes the present state of what I use at present.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org0c937f2" class="outline-2">
-<h2 id="org0c937f2"><span class="section-number-2">2.</span> Use Case Requirements</h2>
+<div id="outline-container-org8f0a8af" class="outline-2">
+<h2 id="org8f0a8af"><span class="section-number-2">2.</span> Use Case Requirements</h2>
 <div class="outline-text-2" id="text-2">
 <ol class="org-ol">
 <li>All of the following should work equally well for locally stored
-material, e.g., downloaded EBooks from Bookshare or Project
+material, e.g., downloaded EBooks from <a href="https://www.bookshare.org/cms/">Bookshare.org</a>  or Project
 Gutenberg, as well as material hosted on the Internet in the form of
 Blogs and Podcasts.</li>
 <li>Create named bookmarks in E-Books (EPub, Daisy).</li>
@@ -248,12 +248,12 @@ being
 </div>
 </div>
 
-<div id="outline-container-org773b36f" class="outline-2">
-<h2 id="org773b36f"><span class="section-number-2">3.</span> User Experience</h2>
+<div id="outline-container-orge4c4b54" class="outline-2">
+<h2 id="orge4c4b54"><span class="section-number-2">3.</span> User Experience</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-org0c1800d" class="outline-3">
-<h3 id="org0c1800d"><span class="section-number-3">3.1.</span> Create And Browse Bookmarks In EBooks</h3>
+<div id="outline-container-org88ed7fa" class="outline-3">
+<h3 id="org88ed7fa"><span class="section-number-3">3.1.</span> Create And Browse Bookmarks In EBooks</h3>
 <div class="outline-text-3" id="text-3-1">
 <ol class="org-ol">
 <li>You can open Project Gutenberg EPubs via the Emacspeak Bookshelf
@@ -288,8 +288,8 @@ See <a href="https://orgmode.org/org.html">Org Mode Manual</a>, <a href="https:/
 </div>
 </div>
 
-<div id="outline-container-orgae93439" class="outline-3">
-<h3 id="orgae93439"><span class="section-number-3">3.2.</span> Create And Browse AMarks In Audio Books</h3>
+<div id="outline-container-orgb0819a5" class="outline-3">
+<h3 id="orgb0819a5"><span class="section-number-3">3.2.</span> Create And Browse AMarks In Audio Books</h3>
 <div class="outline-text-3" id="text-3-2">
 <ol class="org-ol">
 <li>AMarks are Emacspeak's audio equivalent of traditional bookmarks.</li>
@@ -313,8 +313,8 @@ See <a href="https://tvraman.github.io/emacspeak/manual/emacspeak_002damark.html
 </p>
 </div>
 </div>
-<div id="outline-container-orgb3a5b8a" class="outline-3">
-<h3 id="orgb3a5b8a"><span class="section-number-3">3.3.</span> Create  Bookmarks   On Web Pages</h3>
+<div id="outline-container-org4a37267" class="outline-3">
+<h3 id="org4a37267"><span class="section-number-3">3.3.</span> Create  Bookmarks   On Web Pages</h3>
 <div class="outline-text-3" id="text-3-3">
 <p>
 See module <code>org-capture</code> for inspiration.
@@ -322,8 +322,8 @@ See module <code>org-capture</code> for inspiration.
 </div>
 </div>
 
-<div id="outline-container-org6dfa834" class="outline-3">
-<h3 id="org6dfa834"><span class="section-number-3">3.4.</span> Create Audio Bookmarks In Podcasts</h3>
+<div id="outline-container-org26f6b0b" class="outline-3">
+<h3 id="org26f6b0b"><span class="section-number-3">3.4.</span> Create Audio Bookmarks In Podcasts</h3>
 <div class="outline-text-3" id="text-3-4">
 <ol class="org-ol">
 <li>Module <code>emacspeak-m-player</code> is used to play Podcasts and other
@@ -338,8 +338,8 @@ you resume playback at the marked position.</li>
 </div>
 </div>
 
-<div id="outline-container-org3695cf2" class="outline-3">
-<h3 id="org3695cf2"><span class="section-number-3">3.5.</span> Create On-Line Notes Using Org-Mode</h3>
+<div id="outline-container-orgeb98a6b" class="outline-3">
+<h3 id="orgeb98a6b"><span class="section-number-3">3.5.</span> Create On-Line Notes Using Org-Mode</h3>
 <div class="outline-text-3" id="text-3-5">
 <ol class="org-ol">
 <li>See the <a href="https://orgmode.org/org.html">Org Manual</a> for details on taking notes in org-mode.</li>
@@ -354,8 +354,8 @@ opening the notes file in <i>org-mode</i>.</li>
 
 
 
-<div id="outline-container-org9716b2a" class="outline-2">
-<h2 id="org9716b2a"><span class="section-number-2">4.</span> Conclusion: Looking Back, Looking Forward</h2>
+<div id="outline-container-orgc0efc42" class="outline-2">
+<h2 id="orgc0efc42"><span class="section-number-2">4.</span> Conclusion: Looking Back, Looking Forward</h2>
 <div class="outline-text-2" id="text-4">
 <ol class="org-ol">
 <li>This describes a flexible workflow that is built out of multiple
@@ -373,7 +373,7 @@ if needed to implement future extensions.</li>
 <div id="postamble" class="status">
 <p class="date">Date: 2022-10-14 Fri 00:00</p>
 <p class="author">Author: T.V Raman</p>
-<p class="date">Created: 2022-10-14 Fri 10:20</p>
+<p class="date">Created: 2022-10-14 Fri 10:25</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
