--- a/announcements/rich-notes-for-smart-learning.html
+++ b/announcements/rich-notes-for-smart-learning.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-10-14 Fri 10:25 -->
+<!-- 2022-10-14 Fri 10:29 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Learn Smarter By Taking Rich, Hypertext Notes</title>
@@ -197,12 +197,12 @@
 <body>
 <div id="content" class="content">
 <h1 class="title">Learn Smarter By Taking Rich, Hypertext Notes</h1>
-<div id="outline-container-orgb409c60" class="outline-2">
-<h2 id="orgb409c60"><span class="section-number-2">1.</span> Background</h2>
+<div id="outline-container-orgf7ba2eb" class="outline-2">
+<h2 id="orgf7ba2eb"><span class="section-number-2">1.</span> Background</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-As a student, I learnt to take <a href="https://www.cs.cornell.edu/info/people/raman/phd-thesis/html/root-thesis.html">notes in Braille</a> while in class and
-while lerning from audio books.   When reviewing the material, reading
+As a student, I learned to take <a href="https://www.cs.cornell.edu/info/people/raman/phd-thesis/html/root-thesis.html">notes in Braille</a> while in class and
+while learning from audio books.   When reviewing the material, reading
 the notes was far more efficient than re-listening to the original
 recordings; however at the time, I had no means to easily jump to the
 original content when perusing my notes.
@@ -219,12 +219,12 @@ This article summarizes the present state of what I use at present.
 </div>
 </div>
 
-<div id="outline-container-org8f0a8af" class="outline-2">
-<h2 id="org8f0a8af"><span class="section-number-2">2.</span> Use Case Requirements</h2>
+<div id="outline-container-org59016b7" class="outline-2">
+<h2 id="org59016b7"><span class="section-number-2">2.</span> Use Case Requirements</h2>
 <div class="outline-text-2" id="text-2">
 <ol class="org-ol">
 <li>All of the following should work equally well for locally stored
-material, e.g., downloaded EBooks from <a href="https://www.bookshare.org/cms/">Bookshare.org</a>  or Project
+material, e.g., downloaded E-Books from <a href="https://www.bookshare.org/cms/">Bookshare.org</a>  or Project
 Gutenberg, as well as material hosted on the Internet in the form of
 Blogs and Podcasts.</li>
 <li>Create named bookmarks in E-Books (EPub, Daisy).</li>
@@ -233,7 +233,7 @@ Blogs and Podcasts.</li>
 material is available locally, or accessed via the Internet.</li>
 <li>Enable the creation of hyperlinks to such bookmarks.</li>
 <li>Enable the easy creation of notes — organized by topic — while
-reading EBooks  or listening to  audio material.</li>
+reading E-Books  or listening to  audio material.</li>
 <li>Enable the embedding of hyperlinks to the bookmarks mentioned
 earlier within these notes.</li>
 <li>Final experience: creation of notes should require minimal
@@ -248,12 +248,12 @@ being
 </div>
 </div>
 
-<div id="outline-container-orge4c4b54" class="outline-2">
-<h2 id="orge4c4b54"><span class="section-number-2">3.</span> User Experience</h2>
+<div id="outline-container-org84667ad" class="outline-2">
+<h2 id="org84667ad"><span class="section-number-2">3.</span> User Experience</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-org88ed7fa" class="outline-3">
-<h3 id="org88ed7fa"><span class="section-number-3">3.1.</span> Create And Browse Bookmarks In EBooks</h3>
+<div id="outline-container-org0615ac1" class="outline-3">
+<h3 id="org0615ac1"><span class="section-number-3">3.1.</span> Create And Browse Bookmarks In E-Books</h3>
 <div class="outline-text-3" id="text-3-1">
 <ol class="org-ol">
 <li>You can open Project Gutenberg EPubs via the Emacspeak Bookshelf
@@ -288,8 +288,8 @@ See <a href="https://orgmode.org/org.html">Org Mode Manual</a>, <a href="https:/
 </div>
 </div>
 
-<div id="outline-container-orgb0819a5" class="outline-3">
-<h3 id="orgb0819a5"><span class="section-number-3">3.2.</span> Create And Browse AMarks In Audio Books</h3>
+<div id="outline-container-org7f47d14" class="outline-3">
+<h3 id="org7f47d14"><span class="section-number-3">3.2.</span> Create And Browse AMarks In Audio Books</h3>
 <div class="outline-text-3" id="text-3-2">
 <ol class="org-ol">
 <li>AMarks are Emacspeak's audio equivalent of traditional bookmarks.</li>
@@ -297,7 +297,7 @@ See <a href="https://orgmode.org/org.html">Org Mode Manual</a>, <a href="https:/
 time-offset, and a bookmark name.</li>
 <li>AMarks once created can be navigated to when playing that content
 via module <a href="https://tvraman.github.io/emacspeak/manual/emacspeak_002dm_002dplayer.html">Emacspeak MPlayer</a> which provides a rich but seamless
-interface to this powerful Linux media player— here, <i>seamless</i>
+interface — here, <i>seamless</i>
 means you can play media content without switching from any
 on-going task, and in the context of this article, that means you
 can continue taking notes without explicitly switching context to
@@ -313,8 +313,8 @@ See <a href="https://tvraman.github.io/emacspeak/manual/emacspeak_002damark.html
 </p>
 </div>
 </div>
-<div id="outline-container-org4a37267" class="outline-3">
-<h3 id="org4a37267"><span class="section-number-3">3.3.</span> Create  Bookmarks   On Web Pages</h3>
+<div id="outline-container-orge5d3e22" class="outline-3">
+<h3 id="orge5d3e22"><span class="section-number-3">3.3.</span> Create  Bookmarks   On Web Pages</h3>
 <div class="outline-text-3" id="text-3-3">
 <p>
 See module <code>org-capture</code> for inspiration.
@@ -322,8 +322,8 @@ See module <code>org-capture</code> for inspiration.
 </div>
 </div>
 
-<div id="outline-container-org26f6b0b" class="outline-3">
-<h3 id="org26f6b0b"><span class="section-number-3">3.4.</span> Create Audio Bookmarks In Podcasts</h3>
+<div id="outline-container-org80c9b25" class="outline-3">
+<h3 id="org80c9b25"><span class="section-number-3">3.4.</span> Create Audio Bookmarks In Podcasts</h3>
 <div class="outline-text-3" id="text-3-4">
 <ol class="org-ol">
 <li>Module <code>emacspeak-m-player</code> is used to play Podcasts and other
@@ -338,12 +338,12 @@ you resume playback at the marked position.</li>
 </div>
 </div>
 
-<div id="outline-container-orgeb98a6b" class="outline-3">
-<h3 id="orgeb98a6b"><span class="section-number-3">3.5.</span> Create On-Line Notes Using Org-Mode</h3>
+<div id="outline-container-org189d38b" class="outline-3">
+<h3 id="org189d38b"><span class="section-number-3">3.5.</span> Create On-Line Notes Using Org-Mode</h3>
 <div class="outline-text-3" id="text-3-5">
 <ol class="org-ol">
 <li>See the <a href="https://orgmode.org/org.html">Org Manual</a> for details on taking notes in org-mode.</li>
-<li>Insert Hyperlinks To EBooks And Audio In Org-Mode by first storing
+<li>Insert Hyperlinks To E-Books And Audio In Org-Mode by first storing
 the link as described earlier.</li>
 <li>Review Notes, Follow Hyperlinks To Review Original Material  by
 opening the notes file in <i>org-mode</i>.</li>
@@ -354,8 +354,8 @@ opening the notes file in <i>org-mode</i>.</li>
 
 
 
-<div id="outline-container-orgc0efc42" class="outline-2">
-<h2 id="orgc0efc42"><span class="section-number-2">4.</span> Conclusion: Looking Back, Looking Forward</h2>
+<div id="outline-container-orgbc8d6e0" class="outline-2">
+<h2 id="orgbc8d6e0"><span class="section-number-2">4.</span> Conclusion: Looking Back, Looking Forward</h2>
 <div class="outline-text-2" id="text-4">
 <ol class="org-ol">
 <li>This describes a flexible workflow that is built out of multiple
@@ -373,7 +373,7 @@ if needed to implement future extensions.</li>
 <div id="postamble" class="status">
 <p class="date">Date: 2022-10-14 Fri 00:00</p>
 <p class="author">Author: T.V Raman</p>
-<p class="date">Created: 2022-10-14 Fri 10:25</p>
+<p class="date">Created: 2022-10-14 Fri 10:29</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
