--- a/etc/applications.html
+++ b/etc/applications.html
@@ -18,7 +18,7 @@
 <h2>Application Categories</h2>
 <p>
       As of the last update, there are a total of
-      <em>205</em>
+      <em>206</em>
       speech-enabled applications 
       in <em>15</em> categories
       on the Emacspeak audio desktop.
@@ -52,7 +52,7 @@
             (3)
           </a></li>
 <li><a href="#Multimedia">MULTIMEDIA 
-            (15)
+            (16)
           </a></li>
 <li><a href="#Authoring">AUTHORING 
             (15)
@@ -695,7 +695,7 @@
     keystrokes.</td>
 </tr>
 <tr><td colspan="3"><h2><a name="Multimedia" id="Multimedia">MULTIMEDIA     
-          (15)
+          (16)
       </a></h2></td></tr>
 <tr>
 <td>1</td>
@@ -756,27 +756,34 @@
 </tr>
 <tr>
 <td>9</td>
+<td><a id="mpv">mpv</a></td>
+<td>
+      Play Internet  Media  streams. Player of choice for Youtube.
+    </td>
+</tr>
+<tr>
+<td>10</td>
 <td><a id="vuiet">vuiet</a></td>
 <td>
       Discover and play music 
     </td>
 </tr>
 <tr>
-<td>10</td>
+<td>11</td>
 <td><a id="sox">sox</a></td>
 <td>
       Audio workbench for the Emacspeak desktop.
     </td>
 </tr>
 <tr>
-<td>11</td>
+<td>12</td>
 <td><a id="tune-in">tune-in</a></td>
 <td>
       Search, Browse and play Internet radio stations
     </td>
 </tr>
 <tr>
-<td>12</td>
+<td>13</td>
 <td><a id="pianobar">pianobar</a></td>
 <td>
       Play Pandora radio using the Open Source <em>Pianobar</em>
@@ -784,13 +791,13 @@
     </td>
 </tr>
 <tr>
-<td>13</td>
+<td>14</td>
 <td><a id="librivox">librivox</a></td>
 <td>
     API  client for listening to free Librivox audio books.</td>
 </tr>
 <tr>
-<td>14</td>
+<td>15</td>
 <td><a id="emms">emms</a></td>
 <td>
       Emacs equivalent  of XMMS --- a versatile multimedia tool.
@@ -798,7 +805,7 @@
     </td>
 </tr>
 <tr>
-<td>15</td>
+<td>16</td>
 <td><a id="midge">midge</a></td>
 <td>
     Compose and play MIDI files.</td>
