--- a/applications.html
+++ b/applications.html
@@ -18,7 +18,7 @@
 <h2>Application Categories</h2>
 <p>
       As of the last update, there are a total of
-      <em>205</em>
+      <em>206</em>
       speech-enabled applications 
       in <em>15</em> categories
       on the Emacspeak audio desktop.
@@ -52,7 +52,7 @@
             (3)
           </a></li>
 <li><a href="#Multimedia">MULTIMEDIA 
-            (15)
+            (16)
           </a></li>
 <li><a href="#Authoring">AUTHORING 
             (15)
@@ -695,7 +695,7 @@
     keystrokes.</td>
 </tr>
 <tr><td colspan="3"><h2><a name="Multimedia" id="Multimedia">MULTIMEDIA     
-          (15)
+          (16)
       </a></h2></td></tr>
 <tr>
 <td>1</td>
@@ -756,27 +756,34 @@
 </tr>
 <tr>
 <td>9</td>
+<td><a id="mpv">mpv</a></td>
+<td>
+      Play Internet  Media  streams. Player of choice for Youtube.
+    </td>
+</tr>
+<tr>
+<td>10</td>
 <td><a id="vuiet">vuiet</a></td>
 <td>
       Discover and play music 
     </td>
 </tr>
 <tr>
-<td>10</td>
+<td>11</td>
 <td><a id="sox">sox</a></td>
 <td>
       Audio workbench for the Emacspeak desktop.
     </td>
 </tr>
 <tr>
-<td>11</td>
+<td>12</td>
 <td><a id="tune-in">tune-in</a></td>
 <td>
       Search, Browse and play Internet radio stations
     </td>
 </tr>
 <tr>
-<td>12</td>
+<td>13</td>
 <td><a id="pianobar">pianobar</a></td>
 <td>
       Play Pandora radio using the Open Source <em>Pianobar</em>
@@ -784,13 +791,13 @@
     </td>
 </tr>
 <tr>
-<td>13</td>
+<td>14</td>
 <td><a id="librivox">librivox</a></td>
 <td>
     API  client for listening to free Librivox audio books.</td>
 </tr>
 <tr>
-<td>14</td>
+<td>15</td>
 <td><a id="emms">emms</a></td>
 <td>
       Emacs equivalent  of XMMS --- a versatile multimedia tool.
@@ -798,7 +805,7 @@
     </td>
 </tr>
 <tr>
-<td>15</td>
+<td>16</td>
 <td><a id="midge">midge</a></td>
 <td>
     Compose and play MIDI files.</td>
@@ -928,7 +935,7 @@ module emacspeak-evil speech-enables EVIL.</td>
 <td>
       Emacs front-end  to OCR engines.
       This module provides speech-enabled access to image
-      aquisition and  document recognition tools
+      acquisition and  document recognition tools
       available on the underlying platform.
     </td>
 </tr>
@@ -1281,7 +1288,7 @@ module emacspeak-vdiff.</td>
 <td><a id="units">units</a></td>
 <td>
       Simple wizard for accessing Units tool
-      --- a powerful units convertor.
+      --- a powerful units converter.
     </td>
 </tr>
 <tr><td colspan="3"><h2><a name="programming" id=" programming"> PROGRAMMING     
@@ -1375,7 +1382,7 @@ module emacspeak-vdiff.</td>
       Emacs Class Browser with support for Java, C++, C
       and other popular languages.
       Provides navigable table of contents as well as a browsable method and
-      function index  for the file being editted.
+      function index  for the file being edited.
     </td>
 </tr>
 <tr>
@@ -1390,10 +1397,10 @@ module emacspeak-vdiff.</td>
 <td>14</td>
 <td><a id="c">c</a></td>
 <td>
-      Editting support for C, C++  and related languages with full aural
+      Editing support for C, C++  and related languages with full aural
       highlighting and semantic support.
       Provides contextual spoken feedback using semantic context
-      of code being editted.
+      of code being edited.
     </td>
 </tr>
 <tr>
@@ -1408,7 +1415,7 @@ module emacspeak-vdiff.</td>
 <td>16</td>
 <td><a id="perl">perl</a></td>
 <td>
-      Editting support for Perl.
+      Editing support for Perl.
       Features  aural highlighting and easy access to
       online help.
     </td>
@@ -1417,7 +1424,7 @@ module emacspeak-vdiff.</td>
 <td>17</td>
 <td><a id="ruby">ruby</a></td>
 <td>
-      Speech-enables editting support for Ruby.
+      Speech-enables editing support for Ruby.
       Features  aural highlighting and easy access to
       online help.
     </td>
@@ -1426,7 +1433,7 @@ module emacspeak-vdiff.</td>
 <td>18</td>
 <td><a id="lua">lua</a></td>
 <td>
-      Editting support for interactive LUA  development.
+      Editing support for interactive LUA  development.
       Features aural highlighting, structured browsing and debugging.
     </td>
 </tr>
@@ -1434,7 +1441,7 @@ module emacspeak-vdiff.</td>
 <td>19</td>
 <td><a id="Go">Go</a></td>
 <td>
-      Editting support for interactive Go  development.
+      Editing support for interactive Go  development.
       Features aural highlighting, structured browsing and debugging.
     </td>
 </tr>
@@ -1470,7 +1477,7 @@ module emacspeak-vdiff.</td>
 <td>23</td>
 <td><a id="python">python</a></td>
 <td>
-      Editting support for interactive Python development.
+      Editing support for interactive Python development.
       Features aural highlighting, structured browsing and debugging.
     </td>
 </tr>
@@ -1501,7 +1508,7 @@ module emacspeak-vdiff.</td>
 <td>27</td>
 <td><a id="generic">generic</a></td>
 <td>
-      Editting support for JavaScript and  Apache configuration files
+      Editing support for JavaScript and  Apache configuration files
       with voice locking and structured navigation.
     </td>
 </tr>
@@ -1516,21 +1523,21 @@ module emacspeak-vdiff.</td>
 <td>29</td>
 <td><a id="make-mode">make-mode</a></td>
 <td>
-      Editting support for creating and maintaining Makefiles.
+      Editing support for creating and maintaining Makefiles.
     </td>
 </tr>
 <tr>
 <td>30</td>
 <td><a id="sh-script">sh-script</a></td>
 <td>
-      Editting support for shell scripts.
+      Editing support for shell scripts.
     </td>
 </tr>
 <tr>
 <td>31</td>
 <td><a id="rpm-spec">rpm-spec</a></td>
 <td>
-      Editting support for RPM spec files.
+      Editing support for RPM spec files.
     </td>
 </tr>
 <tr>
@@ -1545,7 +1552,7 @@ module emacspeak-vdiff.</td>
 <td>33</td>
 <td><a id="dmacro">dmacro</a></td>
 <td>
-      Dynamic macro package for template-based editting.
+      Dynamic macro package for template-based editing.
     </td>
 </tr>
 <tr>
